[gd_scene load_steps=22 format=2]

[ext_resource path="res://Components/CameraPivot/Pivot.tscn" type="PackedScene" id=1]
[ext_resource path="res://Components/RigidCharacter/character_rigid.gd" type="Script" id=2]
[ext_resource path="res://3d Models/farmer.glb" type="PackedScene" id=3]
[ext_resource path="res://Misc/LakeWobegonNF.ttf" type="DynamicFontData" id=4]

[sub_resource type="PhysicsMaterial" id=9]
friction = 0.7
absorbent = true

[sub_resource type="SphereShape" id=4]

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "idle_legs-loop"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "idle_arms-loop"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "run_arm-loop"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "grab"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "holding"

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "throw"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "run_legs-loop"

[sub_resource type="AnimationNodeBlend2" id=17]
filter_enabled = true
filters = [ "Armature/Skeleton:Bone.002", "Armature/Skeleton:arm.l", "Armature/Skeleton:arm.r", "Armature/Skeleton:hand.l", "Armature/Skeleton:hand.r", "Armature/Skeleton:head", "Armature/Skeleton:neck", "Armature/Skeleton:shoulder.l", "Armature/Skeleton:shoulder.r", "Armature/Skeleton:upperarm.l", "Armature/Skeleton:upperarm.r" ]

[sub_resource type="AnimationNodeOneShot" id=18]

[sub_resource type="AnimationNodeTransition" id=19]
input_count = 2
xfade_time = 0.1
input_0/name = "n"
input_0/auto_advance = false
input_1/name = "y"
input_1/auto_advance = false

[sub_resource type="AnimationNodeTransition" id=20]
input_count = 2
xfade_time = 0.1
input_0/name = "y"
input_0/auto_advance = false
input_1/name = "n"
input_1/auto_advance = false

[sub_resource type="AnimationNodeTransition" id=21]
input_count = 2
xfade_time = 0.1
input_0/name = "y"
input_0/auto_advance = false
input_1/name = "n"
input_1/auto_advance = false

[sub_resource type="AnimationNodeOneShot" id=22]

[sub_resource type="AnimationNodeBlendTree" id=23]
graph_offset = Vector2( -736.657, 171.265 )
nodes/Animation/node = SubResource( 16 )
nodes/Animation/position = Vector2( -373.333, -53.3333 )
"nodes/Animation 2/node" = SubResource( 10 )
"nodes/Animation 2/position" = Vector2( -373.333, 53.3333 )
"nodes/Animation 3/node" = SubResource( 11 )
"nodes/Animation 3/position" = Vector2( -586.667, 293.333 )
"nodes/Animation 4/node" = SubResource( 12 )
"nodes/Animation 4/position" = Vector2( -586.667, 186.667 )
"nodes/Animation 5/node" = SubResource( 13 )
"nodes/Animation 5/position" = Vector2( -906.667, 533.333 )
"nodes/Animation 6/node" = SubResource( 14 )
"nodes/Animation 6/position" = Vector2( -906.667, 426.667 )
"nodes/Animation 7/node" = SubResource( 15 )
"nodes/Animation 7/position" = Vector2( -666.667, 640 )
nodes/Blend2/node = SubResource( 17 )
nodes/Blend2/position = Vector2( 116.032, 147.558 )
nodes/grab/node = SubResource( 18 )
nodes/grab/position = Vector2( -666.667, 426.667 )
nodes/holding/node = SubResource( 19 )
nodes/holding/position = Vector2( -133.333, 320 )
nodes/output/position = Vector2( 426.667, 160 )
nodes/run/node = SubResource( 20 )
nodes/run/position = Vector2( -346.667, 240 )
nodes/running/node = SubResource( 21 )
nodes/running/position = Vector2( -82.421, 72.2511 )
nodes/throw/node = SubResource( 22 )
nodes/throw/position = Vector2( -373.333, 426.667 )
node_connections = [ "output", 0, "Blend2", "holding", 0, "run", "holding", 1, "throw", "grab", 0, "Animation 6", "grab", 1, "Animation 5", "run", 0, "Animation 4", "run", 1, "Animation 3", "Blend2", 0, "running", "Blend2", 1, "holding", "running", 0, "Animation", "running", 1, "Animation 2", "throw", 0, "grab", "throw", 1, "Animation 7" ]

[sub_resource type="DynamicFont" id=24]
font_data = ExtResource( 4 )

[node name="Character" type="RigidBody"]
collision_layer = 4
collision_mask = 7
input_capture_on_drag = true
mode = 2
mass = 0.714286
physics_material_override = SubResource( 9 )
contacts_reported = 7
contact_monitor = true
can_sleep = false
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
script = ExtResource( 2 )
camera_path = NodePath("Pivot")
jump_height = 1.0

[node name="Mesh" type="CollisionShape" parent="."]
shape = SubResource( 4 )

[node name="front" type="RayCast" parent="Mesh"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.35, 0.749 )
enabled = true
cast_to = Vector3( 0, 0, 2 )

[node name="up" type="RayCast" parent="Mesh"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2, 0.75 )
enabled = true
cast_to = Vector3( 0, 0, 2 )

[node name="grab" type="RayCast" parent="Mesh"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.501675, 0 )
enabled = true
cast_to = Vector3( 0, 0, 4 )
collision_mask = 2

[node name="farmer" parent="Mesh" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, -1, 0, 0.22, 0 )

[node name="impulse" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -7 )

[node name="GrabWall" type="Timer" parent="."]
process_mode = 0
wait_time = 0.4
one_shot = true

[node name="GravityNotFreezeCoyote" type="Timer" parent="."]
process_mode = 0
wait_time = 0.15
one_shot = true

[node name="Coyote" type="Timer" parent="."]
process_mode = 0
wait_time = 0.175
one_shot = true

[node name="JumpBuffer" type="Timer" parent="."]
process_mode = 0
one_shot = true

[node name="ThrowDelay" type="Timer" parent="."]
process_mode = 0
wait_time = 0.3
one_shot = true

[node name="AfterVImpulse" type="Timer" parent="."]
process_mode = 0
wait_time = 0.2
one_shot = true

[node name="AfterJump" type="Timer" parent="."]
process_mode = 0
wait_time = 0.3
one_shot = true

[node name="holding" type="Position3D" parent="."]
transform = Transform( 0.999999, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.92338, 0 )

[node name="PinJoint" type="PinJoint" parent="holding"]
transform = Transform( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0 )
nodes/node_a = NodePath("../StaticBody")
params/damping = 0.15

[node name="StaticBody" type="KinematicBody" parent="holding"]

[node name="anim" type="AnimationTree" parent="."]
tree_root = SubResource( 23 )
anim_player = NodePath("../Mesh/farmer/AnimationPlayer")
active = true
parameters/Blend2/blend_amount = 1.0
parameters/grab/active = false
parameters/holding/current = 0
parameters/run/current = 0
parameters/running/current = 0
parameters/throw/active = false

[node name="Pivot" parent="." instance=ExtResource( 1 )]
spring_length = 8.0

[node name="Center" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Score" type="Label" parent="Center"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = -44.0
margin_right = 1290.0
custom_fonts/font = SubResource( 24 )
text = "Score:"
valign = 1

[editable path="Mesh/farmer"]
